Broken layout fixed

--- a/_custom.scss
+++ b/_custom.scss
@@ -239,9 +239,9 @@ h2 img{
 
 /* Drive uploader */
 
-.container{
+/*.container{
   height: 600px;
-}
+}*/
 #veil {
   position:absolute;
   top:0;left:0;right:0;bottom:0;
